# fastapi-docker-example

./: .gitignore  Dockerfile  README.md  index.html  pyproject.toml
.github/workflow/: on_merge.yml  release.yml
.github/workflows/: release.yml
terraform/: main.tf  variables.tf
