
[project]
name = "fastapi-docker-example"
version = "0.1.0"
description = ""
authors = [
    {name = "name",email = "email@example.com"}
]
readme = ""
requires-python = "3.12.4"
dependencies = [
    "fastapi (==0.115.6)",
    "uvicorn (==0.34.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
